<!--
    Projet : Notifium
    Students : Raphaël Margueron / Fabien Mottier / Segan Salomon
    Teacher : Aicha Rizzotti
    Module : 3255.1-Developpement_mobile
    Repository Git : https://github.com/HE-Arc/Notifium
    Date : 25.01.2019

    Strings for the app
 -->
<resources>
    <string name="app_name">Notifium</string>
    <string name="listAlerts_tab_all">Toutes</string>
    <string name="listAlerts_tab_timed">Temps</string>
    <string name="listAlerts_tab_location">Géolocalisation</string>
    <string name="listAlerts_tab_battery">Batterie</string>
    <string name="listAlerts_button_add">+</string>
    <string name="rowAlert_button_edit">🖋️</string>
    <string name="rowAlert_button_remove">❌</string>

    <string name="addAlert">+</string>
    <string name="addAlertDateTime">Temps</string>
    <string name="addAlertDate">Date</string>
    <string name="addAlertTime">Heure</string>
    <string name="addAlertLocation">Emplacement</string>
    <string name="addAlertBattery">Batterie</string>
    <string name="addAlertDefaultName">Le nom de votre l\'alerte</string>
    <string name="addAlertDefaultDescription">Ce que vous voulez vous rappelez</string>
    <string name="addAlertPeriodic">Répétition</string>
    <string name="addAlertEveryDay">Tous les N jours</string>
    <string name="addAlertFromWeekDay">À partir de</string>
    <string name="addAlertDefaultTime">00:00:00</string>
    <string name="addAlertDefaultDate">01.01.1900</string>
    <string name="addAlertCancelButtonMenu">Cancel</string>
    <string name="addAlertAddButtonMenu">Add alert</string>


    <string name="addAlertLatitude">Latitude</string>
    <string name="addAlertLongitude">Longitude</string>
    <string name="addAlertRayon">Rayon</string>

    <string-array name="addAlertWeekDays">
        <item>Lundi</item>
        <item>Mardi</item>
        <item>Mercredi</item>
        <item>Jeudi</item>
        <item>Vendredi</item>
        <item>Samedi</item>
        <item>Dimanche</item>
    </string-array>
    <string name="addAlertEveryWeek">Hébdomadaire</string>
    <string name="addAlertEveryMonth">Mensuel</string>
    <string name="addAlertEveryMonth1">Tous les</string>
    <string name="addAlertEveryMonth2">du mois</string>
    <string name="addAlertSave">Enregistrer</string>
</resources>
