<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listAlerts_tab_all" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemTimed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listAlerts_tab_timed" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listAlerts_tab_location" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listAlerts_tab_battery" />
    </android.support.design.widget.TabLayout>

    <ListView
        android:id="@+id/alertListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:padding="0dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addAlertButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/listAlerts_button_add">
    </Button>

</RelativeLayout>
