<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/etAlertName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/addAlertDefaultName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />
            <EditText
                android:id="@+id/etAlertDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/addAlertDefaultDescription"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />
            <!--
                Time
            -->
            <Switch
                android:id="@+id/switchDateTime"
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:text="@string/addAlertDateTime"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="138dp" />

            <LinearLayout
                android:id="@+id/layoutDateTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <LinearLayout
                        android:id="@+id/layoutTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/addAlertTime" />

                        <Button
                            android:id="@+id/btnTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/addAlertDefaultTime" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutDate"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/addAlertDate" />

                        <Button
                            android:id="@+id/btnDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/addAlertDefaultDate" />
                    </LinearLayout>
                </LinearLayout>

                <Switch
                    android:id="@+id/switchPeriodic"
                    android:layout_width="150dp"
                    android:layout_height="38dp"
                    android:text="@string/addAlertPeriodic"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="138dp" />

                <LinearLayout
                    android:id="@+id/layoutPeriodic"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rbtnEveryNDays"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/addAlertEveryDay" />

                        <LinearLayout
                            android:id="@+id/layoutEveryNDays"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <LinearLayout
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/addAlertEveryNDay" />
                                <EditText
                                    android:id="@+id/etEveryNDays"
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:digits="0123456789"
                                    android:inputType="numberDecimal" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/addAlertFromWeekDay" />

                                <Button
                                    android:id="@+id/btnDate2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/addAlertDefaultDate" />
                            </LinearLayout>
                        </LinearLayout>

                        <RadioButton
                            android:id="@+id/rbtnEveryWeek"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/addAlertEveryWeek" />

                        <LinearLayout
                            android:id="@+id/layoutEveryWeek"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <Button
                                android:id="@+id/everyWeek0"
                                android:layout_width="38dp"
                                android:layout_height="38dp"
                                android:text="L" />

                            <Button
                                android:id="@+id/everyWeek1"
                                android:layout_width="38dp"
                                android:layout_height="38dp"
                                android:text="M" />

                            <Button
                                android:id="@+id/everyWeek2"
                                android:layout_width="38dp"
                                android:layout_height="38dp"
                                android:text="M" />

                            <Button
                                android:id="@+id/everyWeek3"
                                android:layout_width="38dp"
                                android:layout_height="38dp"
                                android:text="J" />

                            <Button
                                android:id="@+id/everyWeek4"
                                android:layout_width="38dp"
                                android:layout_height="38dp"
                                android:text="V" />

                            <Button
                                android:id="@+id/everyWeek5"
                                android:layout_width="38dp"
                                android:layout_height="38dp"
                                android:text="S" />

                            <Button
                                android:id="@+id/everyWeek6"
                                android:layout_width="38dp"
                                android:layout_height="38dp"
                                android:text="D" />
                        </LinearLayout>

                        <RadioButton
                            android:id="@+id/rbtnEveryMonth"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/addAlertEveryMonth" />

                        <LinearLayout
                            android:id="@+id/layoutEveryMonth"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/addAlertEveryMonth1" />
                            <EditText
                                android:id="@+id/etEveryMonth"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:digits="0123456789"
                                android:inputType="numberDecimal" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/addAlertEveryMonth2" />
                        </LinearLayout>
                    </RadioGroup>
                </LinearLayout><!-- End of the periodic layout -->

            </LinearLayout> <!-- End of the time layout -->
            <!--
                Location
            -->
            <Switch
                android:id="@+id/switchLocation"
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:text="@string/addAlertLocation"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="138dp" />
            <LinearLayout
                android:id="@+id/layoutLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="@color/colorPrimaryLight"
                android:padding="10dp">
                <Button
                    android:id="@+id/btnPickLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:text="@string/addAlertDefaultTime"/>
            </LinearLayout>
            <!--
                Battery
            -->
            <Switch
                android:id="@+id/switchBattery"
                android:layout_width="150dp"
                android:layout_height="38dp"
                android:text="@string/addAlertBattery"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="138dp" />
            <LinearLayout
                android:id="@+id/layoutBattery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="@color/colorPrimaryLight"
                android:padding="10dp">
                <SeekBar
                    android:id="@+id/seekBarBattery"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight=".80"
                    android:min="1"
                    android:progress="15"
                    android:max="100"/>
                <TextView
                    android:id="@+id/textViewBattery"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight=".20"
                    android:text="15%"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutSave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/addAlertSave" />
            </LinearLayout>
        </LinearLayout>

     <!--   <android.support.design.widget.FloatingActionButton
            android:id="@+id/a12345"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp" />-->

    </ScrollView>
</android.support.constraint.ConstraintLayout>
